[package]
name = "suivm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.32"
cfg-if = "1.0.0"
clap = { version = "4.0", features = ["derive"] }
dirs = "1.0.5"
indicatif = "0.17.1"
once_cell = { version = "1.8.0" }
reqwest = { version = "0.11.9", features = ['blocking', 'json'] }
semver = "1.0.4"
serde = { version = "1.0.136", features = [ "derive" ]}
serde_json = "1.0.78"
tempfile = "3.3.0"
thiserror = "1.0.30"