[package]
name = "suivm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.32"
cfg-if = "1.0.0"
clap = { version = "4.0", features = ["derive"] }
dirs = "1.0.5"
futures-util = "0.3.14"
indicatif = "0.17.2"
once_cell = "1.8.0"
reqwest = { version = "0.11.9", features = ["json", "stream"] }
semver = "1.0.4"
serde = { version = "1.0.136", features = [ "derive" ]}
serde_json = "1.0.78"
tempfile = "3.3.0"
thiserror = "1.0.30"
tokio = { version = "1.22.0", features = ["full"] }
