[package]
name = "suivm"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "suivm"
path = "src/main.rs"

[[bin]]
name = "sui"
path = "src/sui/main.rs"

[dependencies]
anyhow = "1.0.32"
clap = { version = "4.0", features = ["derive"] }
dirs = "1.0.5"
indicatif = "0.17.2"
serde = { version = "1.0.136", features = [ "derive" ]}
serde_json = "1.0.78"
curl = "0.4.44"
